--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet" />
     <title>Fun with Triangles</title>
 </head>
 
 <body>
     <h1>Is Triangle?</h1>
-    <label for="angle1">angle1</label>
-    <input type="number" class="angle-input" />
-    <label for="angle2">angle2</label>
-    <input type="number" class="angle-input" />
-    <label for="angle3">angle3</label>
-    <input type="number" class="angle-input" />
+    <label for="angle1">Angle-1
+        <input type="number" class="angle-input" />
+    </label>
+    <label for="angle2">Angle-2
+        <input type="number" class="angle-input" />
+    </label>
+    <label for="angle3">Angle-3
+        <input type="number" class="angle-input" />
+    </label>
+
     <button id="is-triangle-btn">Is Triangle?</button>
 
     <div id="output"></div>
