--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
 </head>
 
 <body>
+    <nav class="navigation container">
+        <div class="nav-brand">Fun with Triangles</div>
+        <ul class="non-bullet nav-pills">
+            <li class="list-inline">
+                <a class="link active" href="/">Is Triangle?</a>
+            </li>
+            <li class="list-inline">
+                <a class="link" href="quiz.html">Quiz?</a>
+            </li>
+            <li class="list-inline">
+                <a class="link" href="hypotenuse.html">Hypotenuse</a>
+            </li>
+            <li class="list-inline">
+                <a class="link" href="area.html">Area of Triangle</a>
+            </li>
+        </ul>
+    </nav>
+
+
     <h1>Is Triangle?</h1>
     <label for="angle1">Angle-1
         <input type="number" class="angle-input" />
@@ -24,6 +43,9 @@
     <button id="is-triangle-btn">Is Triangle?</button>
 
     <div id="output"></div>
+
+
+
 
     <script src="script.js"></script>
 </body>
