--- a/area.html
+++ b/area.html
@@ -10,6 +10,23 @@
 </head>
 
 <body>
+    <nav class="navigation container">
+        <div class="nav-brand">Fun with Triangles</div>
+        <ul class="non-bullet nav-pills">
+            <li class="list-inline">
+                <a class="link" href="index.html">Is Triangle?</a>
+            </li>
+            <li class="list-inline">
+                <a class="link" href="quiz.html">Quiz?</a>
+            </li>
+            <li class="list-inline">
+                <a class="link" href="hypotenuse.html">Hypotenuse</a>
+            </li>
+            <li class="list-inline">
+                <a class="link active" href="/">Area of Triangle</a>
+            </li>
+        </ul>
+    </nav>
     <h1>Calculate Area of Triangle</h1>
     <label>Base (in cm)</label>
     <input type="number" class="side-input" />
@@ -17,6 +34,8 @@
     <input type="number" class="side-input" />
     <button id="area-btn">Calculate Area</button>
     <div id="output"></div>
+
+
 
 
     <script src="area.js"></script>
