--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -10,6 +10,23 @@
 </head>
 
 <body>
+    <nav class="navigation container">
+        <div class="nav-brand">Fun with Triangles</div>
+        <ul class="non-bullet nav-pills">
+            <li class="list-inline">
+                <a class="link" href="index.html">Is Triangle?</a>
+            </li>
+            <li class="list-inline">
+                <a class="link" href="quiz.html">Quiz?</a>
+            </li>
+            <li class="list-inline">
+                <a class="link active" href="/">Hypotenuse</a>
+            </li>
+            <li class="list-inline">
+                <a class="link" href="area.html">Area of Triangle</a>
+            </li>
+        </ul>
+    </nav>
     <h1>Calculate Hypotenuse</h1>
     <label>a =</label>
     <input type="number" class="side-input" />
