--- a/quiz.html
+++ b/quiz.html
@@ -10,25 +10,45 @@
 </head>
 
 <body>
+    <nav class="navigation container">
+        <div class="nav-brand">Fun with Triangles</div>
+        <ul class="non-bullet nav-pills">
+            <li class="list-inline">
+                <a class="link" href="index.html">Is Triangle?</a>
+            </li>
+            <li class="list-inline">
+                <a class="link active" href="/">Quiz?</a>
+            </li>
+            <li class="list-inline">
+                <a class="link" href="hypotenuse.html">Hypotenuse</a>
+            </li>
+            <li class="list-inline">
+                <a class="link" href="area.html">Area of Triangle</a>
+            </li>
+        </ul>
+    </nav>
     <h1>Triangle Quiz</h1>
     <form class="quiz-form">
         <div class="question-container">
             <p>What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</p>
-            <label><input type="radio" name="question1" value="45°" />45°</label>
-            <label><input type="radio" name="question1" value="60°" />60°</label>
-            <label><input type="radio" name="question1" value="90°" />90°</label>
+            <label><input type="radio" name="question1" value="45°" id="mcq" />45°</label>
+            <label><input type="radio" name="question1" value="60°" id="mcq" />60°</label>
+            <label><input type="radio" name="question1" value="90°" id="mcq" />90°</label>
         </div>
 
         <div class="question-container">
             <p>If a triangle has an angle of 90 degrees, what is it called?</p>
-            <label><input type="radio" name="question2" value="obtuse" />obtuse</label>
-            <label><input type="radio" name="question2" value="acute" />acute</label>
-            <label><input type="radio" name="question2" value="right-angled" />right-angled</label>
+            <label><input type="radio" name="question2" value="obtuse" id="mcq" />obtuse</label>
+            <label><input type="radio" name="question2" value="acute" id="mcq" />acute</label>
+            <label><input type="radio" name="question2" value="right-angled" id="mcq" />right-angled</label>
         </div>
     </form>
     <button id="submit-answer-btn">Submit Answers</button>
 
     <div id="output"></div>
+
+
+
 
     <script src="quiz.js"></script>
 </body>
